Disable WebUSB detector logic on Windows.

Initializing the WebUSB device detector logic causes the USB subsystem
to attempt to fully enumerate the system's USB bus. This has been found
to cause jank and hangs on Chrome's FILE thread on Windows. Disabling
this component of WebUSB while the issue is investigated.

WebUSB will continue to function but this change will prevent the issue
from impacting users who do not visit sites using it.

BUG=656702
TEST=Verified USB subsystem is not initialized on startup on Windows by
checking chrome://device-log. Verified still initialized on Linux.

Review-Url: https://codereview.chromium.org/2422403003
Cr-Commit-Position: refs/heads/master@{#425867}

Former-commit-id: dfd32df76aea1a2d4f1aad69c74ded742a2ac69b