chrome/browser/usb/web_usb_detector.cc
@@ -118,6 +118,9 @@ WebUsbDetector::WebUsbDetector() : observer_(this) {}
 WebUsbDetector::~WebUsbDetector() {}
 
 void WebUsbDetector::Initialize() {
+// Disabled on Windows due to jank and hangs caused by enumerating devices.
+// https://crbug.com/656702
+#if !defined(OS_WIN)
   SCOPED_UMA_HISTOGRAM_TIMER("WebUsb.DetectorInitialization");
   device::UsbService* usb_service =
       device::DeviceClient::Get()->GetUsbService();
@@ -125,6 +128,7 @@ void WebUsbDetector::Initialize() {
     return;
 
   observer_.Add(usb_service);
+#endif
 }
 
 void WebUsbDetector::OnDeviceAdded(scoped_refptr<device::UsbDevice> device) {
